2007-06-27 Sarka Todorova <sarka.todorova@cern.ch>
	* couple of fixes concerning the identification:  
        - misidentified phi index for TGC stations fixed
	- reference position added for RPC/CSC, as well as check of TGC displacement
	* unchecked StatusCode in initialization fixed (?)
	* tagged as MuonTrackingGeometry-00-00-47  

2007-05-24 Sarka Todorova <sarka.todorova@cern.ch>
        * fix material properties in spacer (wrong zOverAtimesRho)
	* tagged as MuonTrackingGeometry-00-00-46
	
2007-05-23 Sarka Todorova <sarka.todorova@cern.ch>
        * fix orientation of layer representation in barrel(box) stations
	* tagged as MuonTrackingGeometry-00-00-45
	
2007-05-19 Sarka Todorova <sarka.todorova@cern.ch>
	* fix a problem in geometry builder 
        * tagged as MuonTrackingGeometry-00-00-44

2007-05-14 Sarka Todorova <sarka.todorova@cern.ch>
	* fix problem in finalization 
        * tagged as MuonTrackingGeometry-00-00-43

2007-05-07 Sarka Todorova <sarka.todorova@cern.ch>
        * memory leaks - major clean-up (thanks to Scott Snyder)
	* use of GeoVolumeCursor extended to MuonInertMaterialBuilder
	* persistent problem: unidentified RPC layers in BMS stations 
        * tagged as MuonTrackingGeometry-00-00-42

2007-04-12 Sarka Todorova <sarka.todorova@cern.ch>
        * further improvement in initialization time (change iteration over GeoModel tree and remove RpcIdHelper::valid())
	* fixed identification of assembled stations (BOG,..)
	* name of inert volume envelope changed to differ from volume itself 
	* persistent problem: unidentified RPC layers in BMS stations 
        * tagged as MuonTrackingGeometry-00-00-41

2007-04-11 Sarka Todorova <sarka.todorova@cern.ch>
        * faster initialization (identify prototypes and recalculate) 
	* persistent problem: unidentified RPC layers in BMS stations 
        * tagged as MuonTrackingGeometry-00-00-40

2007-04-10 Sarka Todorova <sarka.todorova@cern.ch>